--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "webpack-cli": "^3.2.1"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "proptypes": "^1.1.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
