--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-alert": "^4.0.4",
     "react-alert-template-basic": "^1.0.0",
     "react-dom": "^16.7.0",
+    "react-favicon": "0.0.14",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-transition-group": "^2.5.3",
