--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,9 @@ autopep8 = "*"
 django = "*"
 djangorestframework = "*"
 django-rest-knox = "*"
+django-heroku = "*"
+gunicorn = "*"
+"psycopg2-binary" = "*"
 
 [requires]
 python_version = "3.7"
